# surferjeff.github.io

./: .gitignore  README.md  hoagies.txt  index.html  tastykakes.txt
chat-gpt/: deque.html
elm-hangman/: Makefile  README.md  elm.json
elm-hangman/public/: elm.js  words.txt
elm-hangman/release/: elm.js  index.html
elm-hangman/src/: Main.elm
fcards/: README.md  package.json
freesplit/: .gitignore  Cargo.toml  package-lock.json
freesplit/src/: lib.rs
freesplit/www/: Main.elm  index.html  index.js  package-lock.json  package.json  webpack.config.js
gemini-puzzle/: index.html
goldilocks/csharp/: Program.cs
goldilocks/java/: Url.java  point.java
goldilocks/rust/: Cargo.toml
goldilocks/src/: main.rs
goldilocks/typescript/: point.ts
hello-i18n/: README.md  package-lock.json  package.json
hello-i19n/: README.md  package-lock.json  package.json
hello-i19n/src/: i18n.ts  main.ts
htmx-gallery/: index.html
paidmerge/: .gitignore  README.md  package-lock.json  package.json  vue.config.js
paidmerge/wasm/: Cargo.toml
py2format/: Cargo.toml
react-puzzle/: package-lock.json  package.json
react-puzzle/src/: App.js
square-puzzle/: index.html  puzzle.css  puzzle.js  solution.txt
tryfinally/: Cargo.toml
tryfinally/src/: arrays.rs  main.rs
worker-loader-wasm/wawa/: README.md  generated.webpack.config.js  package-lock.json  (+1 more)
worker-loader-wasm/wawa/wasm/: Cargo.toml
worker-loader-wasm/wawa/wasm/pkg/: package.json  wawasm.d.ts  wawasm.js  wawasm_bg.js  wawasm_bg.wasm  wawasm_bg.wasm.d.ts
worker-loader-wasm/wawa/wasm/src/: lib.rs
(+9 files in other folders)
