[package]
name = "wawasm"
version = "0.1.0"
authors = ["jeff"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.45"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
simple_logger = "1.9.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Location',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
